# SHA-1-zeros-finder

./: Cargo.toml  README.md
src/: kernel.cl  lib.rs  main.rs
