[package]
name = "exasol_challenge"
version = "0.1.0"
authors = ["toor <guiennet.jonathan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocl = "0.19"
rand = "0.7.3"
num-bigint = "0.3.0"
#clap = "2.33.3"
pyo3 = ""

[lib]
name = "sha1_exasol"
#crate-type = ["cdylib"]

#[dependencies.pyo3]
#version = "0.7.0"
#features = ["extension-module"]
